--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "fuse.js": "^6.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweet-scroll": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
